--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             margin-top: 1rem;
             width: 100%;
             word-wrap: break-word;
+            white-space: pre-line;
         }
     </style>
 </head>
