--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         #canvas {
             width: 480px;
-            height: 480px;
+            height: 660px;
             display: block;
             margin-top: 1rem;
             border: 1px solid black;
@@ -22,6 +22,9 @@
         #console {
             margin-top: 1rem;
             width: 100%;
+            height: 15em;
+            overflow-y: scroll;
+            -webkit-overflow-scrolling: touch;
             word-wrap: break-word;
             white-space: pre-line;
         }
@@ -34,7 +37,7 @@
         <input type="file" id="rom-upload"></input>
         <button type="button" id="rom-upload-button">Select ROM</button>
     </label>
-    <canvas id="canvas" width="160" height="160"></canvas>
+    <canvas id="canvas" width="160" height="220"></canvas>
     <pre id="console"></pre>
     <script src="src/cloudpilot.js"></script>
     <script>
@@ -55,6 +58,11 @@
                 node.innerText = text;
 
                 return node.innerHTML;
+            }
+
+            function appendLog(msg) {
+                consoleElt.innerHTML += (escape(msg) + '<br/>');
+                consoleElt.scrollTop = consoleElt.scrollHeight;
             }
 
             async function main(module) {
@@ -105,8 +113,8 @@
             createModule({
                 noInitialRun: true,
                 canvas: document.getElementById('canvas'),
-                print: x => consoleElt.innerHTML += (escape(x) + '<br/>'),
-                printErr: x => consoleElt.innerHTML += (escape(x) + '<br />')
+                print: appendLog,
+                printErr: appendLog
             })
                 .then(main);
         })()
